kubernetes/deployments/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: code-server 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels: 
        app: code-server
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: code-server
        image: codercom/code-server
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data 
          mountPath: /home/coder 
      volumes: 
      - name: data
        persistentVolumeClaim:
          claimName: code-server-pvc
