kubernetes/deployments/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  type: ClusterIP
  selector:
    app: code-server
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
