kubernetes/deployments/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  rules:
    - host: codeserver.moabdullahi.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 80

  tls:
    - hosts:
        - codeserver.moabdullahi.uk
      secretName: code-server-tls
